# distributed_sum_agreement

./: LICENSE  README  otp.cabal  stack.yaml
app/: Main.hs
src/: Common.hs  Lib.hs  OtpProtocol.hs  Simulation.hs  State.hs
test/: Spec.hs
