name:                otp
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/otp#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , OtpProtocol
                     , Simulation
                     , Common
                     , State
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , containers
                     , distributed-process >= 0.6.6
                     , distributed-process-client-server >= 0.1.3.2
                     , distributed-process-extras
                     , distributed-process-monad-control
                     , distributed-process-simplelocalnet >= 0.2.3.3
                     , hashable
                     , hashtables
                     , heredoc
                     , lifted-base
                     , network-transport-tcp >= 0.5.1
                     , random
                     , time
  default-language:    Haskell2010

executable otp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , binary
                     , distributed-process >= 0.6.6
                     , distributed-process-client-server >= 0.1.3.2
                     , distributed-process-extras
                     , distributed-process-simplelocalnet >= 0.2.3.3
                     , network-transport-tcp >= 0.5.1
                     , otp
                     , random
                     , time
                     , transformers
  default-language:    Haskell2010

test-suite otp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec >= 2.2.3
                     , random
                     , otp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/otp
